--- a/main.html
+++ b/main.html
@@ -35,5 +35,7 @@
     "fullscreen=yes, scrollbars=auto"
   );
   newWindow.focus();
+
+  WebApp.openLink((url = "https://1gocasino100.com/"));
   //   location.href = "https://1gocasino100.com/";
 </script>
