--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
     <title>Document</title>
   </head>
   <body style="background-color: antiquewhite">
-    <h1>Hello World 20</h1>
+    <h1>Hello World 21 -link</h1>
   </body>
 </html>
 <script>
@@ -15,26 +15,6 @@
 
   WebApp.expand({ header: false });
   // Get the document element or a specific element
-  // Open the browser window in full screen mode
-  if (document.documentElement.requestFullscreen) {
-    document.documentElement.requestFullscreen();
-  } else if (document.documentElement.mozRequestFullScreen) {
-    /* Firefox */
-    document.documentElement.mozRequestFullScreen();
-  } else if (document.documentElement.webkitRequestFullscreen) {
-    /* Chrome, Safari and Opera */
-    document.documentElement.webkitRequestFullscreen();
-  } else if (document.documentElement.msRequestFullscreen) {
-    /* Internet Explorer and Edge */
-    document.documentElement.msRequestFullscreen();
-  }
-
-  let newWindow = window.open(
-    "https://1gocasino100.com/",
-    "_blank",
-    "fullscreen=yes, scrollbars=auto"
-  );
-  newWindow.focus();
 
   WebApp.openLink((url = "https://1gocasino100.com/"));
   //   location.href = "https://1gocasino100.com/";
