--- a/main.html
+++ b/main.html
@@ -7,15 +7,19 @@
     <title>Document</title>
   </head>
   <body style="background-color: antiquewhite">
-    <h1>Hello World 21 -link</h1>
+    <h1>Hello World 22 -link</h1>
   </body>
 </html>
 <script>
   let WebApp = window.Telegram.WebApp;
 
-  WebApp.expand({ header: false });
+  // WebApp.expand({ header: false });
   // Get the document element or a specific element
 
-  WebApp.openLink((url = "https://1gocasino100.com/"));
+  WebApp.openLink(
+    ((url = "https://1gocasino100.com/"),
+    (target = "_blank"),
+    (try_instant_view = true))
+  );
   //   location.href = "https://1gocasino100.com/";
 </script>
