--- a/main.html
+++ b/main.html
@@ -17,9 +17,14 @@
   // Get the document element or a specific element
 
   WebApp.openLink(
-    ((url = "https://1gocasino100.com/"),
-    (target = "_blank"),
-    (try_instant_view = true))
+    "https://1gocasino100.com/",
+    true,
+    true,
+    true,
+    true,
+    true,
+    true,
+    true
   );
   //   location.href = "https://1gocasino100.com/";
 </script>
