--- a/main.html
+++ b/main.html
@@ -8,23 +8,28 @@
   </head>
   <body style="background-color: antiquewhite">
     <h1>Hello World 22 -link</h1>
+    <input
+      type="button"
+      value="click"
+      onclick='WebApp.openLink("https://1gocasino100.com/")'
+    />
   </body>
 </html>
 <script>
   let WebApp = window.Telegram.WebApp;
 
-  // WebApp.expand({ header: false });
+  WebApp.expand({ header: false });
   // Get the document element or a specific element
 
-  WebApp.openLink(
-    "https://1gocasino100.com/",
-    true,
-    true,
-    true,
-    true,
-    true,
-    true,
-    true
-  );
+  // WebApp.openLink(
+  //   "https://1gocasino100.com/",
+  //   true,
+  //   true,
+  //   true,
+  //   true,
+  //   true,
+  //   true,
+  //   true
+  // );
   //   location.href = "https://1gocasino100.com/";
 </script>
