--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
     <title>Document</title>
   </head>
   <body style="background-color: antiquewhite">
-    <h1>Hello World 22 -link</h1>
+    <h1>Hello World 22 - button</h1>
     <input
       type="button"
       value="click"
