--- a/main.html
+++ b/main.html
@@ -7,11 +7,11 @@
     <title>Document</title>
   </head>
   <body style="background-color: antiquewhite">
-    <h1>Hello World 22 - button</h1>
+    <h1>Hello World 24 - button</h1>
     <input
       type="button"
       value="click"
-      onclick='WebApp.openLink("https://1gocasino100.com/")'
+      onclick="WebApp.expand({ header: false });"
     />
   </body>
 </html>
