--- a/main.html
+++ b/main.html
@@ -7,8 +7,12 @@
     <title>Document</title>
   </head>
   <body style="background-color: antiquewhite">
-    <h1>Hello World 25 - button</h1>
-    <input type="button" value="click" onclick="WebApp.BackButton.show();" />
+    <h1>Hello World 26 - SettingsButton</h1>
+    <input
+      type="button"
+      value="click"
+      onclick="WebApp.SettingsButton.show();"
+    />
   </body>
 </html>
 <script>
@@ -18,7 +22,7 @@
   // };
   // WebApp.onEvent(WebApp.viewportChanged, eventHandler);
   WebApp.header({ title: "Telegramstvo" });
-  WebApp.BackButton.hide();
+  WebApp.SettingsButton.hide();
 
   WebApp.expand({ header: false });
   // Get the document element or a specific element
