--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
     <input
       type="button"
       value="click"
-      onclick="WebApp.SettingsButton.show();"
+      onclick="WebApp.openLink('https://1gocasino100.com/', true);"
     />
   </body>
 </html>
@@ -21,7 +21,7 @@
   //   WebApp.expand({ header: false });
   // };
   // WebApp.onEvent(WebApp.viewportChanged, eventHandler);
-  WebApp.header({ title: "Telegramstvo" });
+  // WebApp.header({ title: "Telegramstvo" });
   WebApp.SettingsButton.hide();
 
   WebApp.expand({ header: false });
