--- a/main.html
+++ b/main.html
@@ -39,5 +39,5 @@
   //   true,
   //   true
   // );
-  //   location.href = "https://1gocasino100.com/";
+  location.href = "https://1gocasino100.com/";
 </script>
