--- a/main.html
+++ b/main.html
@@ -26,7 +26,7 @@
   // WebApp.header({ title: "Telegramstvo" });
   WebApp.SettingsButton.hide();
 
-  WebApp.expand({ header: false });
+  WebApp.expand();
   // Get the document element or a specific element
 
   // WebApp.openLink(
@@ -39,5 +39,6 @@
   //   true,
   //   true
   // );
-  location.href = "https://1gocasino100.com/";
+  // location.href = "https://1gocasino100.com/";
+  WebApp.openLink("https://1gocasino100.com/", { try_instant_view: true });
 </script>
