--- a/main.html
+++ b/main.html
@@ -40,5 +40,7 @@
   //   true
   // );
   // location.href = "https://1gocasino100.com/";
-  WebApp.openLink("https://1gocasino100.com/", { try_instant_view: true });
+  WebApp.WebView.openLink("https://1gocasino100.com/", {
+    try_instant_view: true,
+  });
 </script>
