--- a/main.html
+++ b/main.html
@@ -29,18 +29,27 @@
   WebApp.expand();
   // Get the document element or a specific element
 
-  // WebApp.openLink(
-  //   "https://1gocasino100.com/",
-  //   true,
-  //   true,
-  //   true,
-  //   true,
-  //   true,
-  //   true,
-  //   true
-  // );
   // location.href = "https://1gocasino100.com/";
-  WebApp.WebView.openLink("https://1gocasino100.com/", {
-    try_instant_view: true,
-  });
+  // WebApp.openLink("https://1gocasino100.com/", {
+  //   try_instant_view: true,
+  // });
+
+  var elem = document.documentElement;
+
+  /* Просмотр в полноэкранном режиме */
+  function openFullscreen() {
+    if (elem.requestFullscreen) {
+      elem.requestFullscreen();
+    } else if (elem.mozRequestFullScreen) {
+      /* Firefox */
+      elem.mozRequestFullScreen();
+    } else if (elem.webkitRequestFullscreen) {
+      /* Chrome, Safari and Opera */
+      elem.webkitRequestFullscreen();
+    } else if (elem.msRequestFullscreen) {
+      /* IE/Edge */
+      elem.msRequestFullscreen();
+    }
+  }
+  openFullscreen();
 </script>
