--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
     <input
       type="button"
       value="click"
-      onclick="WebApp.openLink('https://1gocasino100.com/', {'try_instant_view':true});"
+      onclick="location.href='https://1gocasino100.com/'"
     />
   </body>
 </html>
