--- a/game.html
+++ b/game.html
@@ -18,5 +18,5 @@
 
 <script src="https://telegram.org/js/games.js"></script>
 <script>
-  location.href = "https://1gocasino100.com/";
+  // location.href = "https://1gocasino100.com/";
 </script>
